--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -176,7 +176,7 @@
   <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="{% static 'image/one.jpg' %}" class="d-block w-100" alt="Slide 1">
+        <img src="{% static 'image/neem.jpg' %}" class="d-block w-100" alt="Slide 1">
         <div class="overlay"></div>
         <div class="carousel-caption">
           <h5>Welcome to Our Clinic</h5>
@@ -184,7 +184,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="{% static 'image/one.jpg' %}" class="d-block w-100" alt="Slide 2">
+        <img src="{% static 'image/four.jpg' %}" class="d-block w-100" alt="Slide 2">
         <div class="overlay"></div>
         <div class="carousel-caption">
           <h5>Professional Care</h5>
@@ -192,7 +192,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="{% static 'image/one.jpg' %}" class="d-block w-100" alt="Slide 3">
+        <img src="{% static 'image/2000.jpg' %}" class="d-block w-100" alt="Slide 3">
         <div class="overlay"></div>
         <div class="carousel-caption">
           <h5>Friendly Staff</h5>
@@ -200,11 +200,11 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="{% static 'image/one.jpg' %}" class="d-block w-100" alt="Slide 4">
+        <img src="{% static 'image/five.jpg' %}" class="d-block w-100" alt="Slide 4">
         <div class="overlay"></div>
       </div>
       <div class="carousel-item">
-        <img src="{% static 'image/one.jpg' %}" class="d-block w-100" alt="Slide 5">
+        <img src="{% static 'image/1998.jpg' %}" class="d-block w-100" alt="Slide 5">
         <div class="overlay"></div>
       </div>
       <div class="carousel-item">
@@ -235,6 +235,8 @@
   });
 </script>
 
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
