--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -371,9 +371,10 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 150, 255, 0.3); /* أزرق فاتح شفاف */
+  background: rgba(55, 109, 148, 0.15); /* ظل أزرق خفيف جدًا */
   z-index: 1;
 }
+
 
 /* النص فوق الظل */
 .carousel-caption {
