--- a/main/templates/services/accounting.html
+++ b/main/templates/services/accounting.html
@@ -26,7 +26,7 @@
       </div>
 
       <div class="feature-card">
-        <img src="{% static 'image/66.jpg' %}" alt="الإحصائيات" class="feature-icon">
+        <img src="{% static '..image/66.jpg' %}" alt="الإحصائيات" class="feature-icon">
         <h3>تحليل مالي مبسط</h3>
         <p>يتابع الأداء المالي عبر تقارير ورسوم بيانية.</p>
       </div>
