--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -58,6 +58,14 @@
          <p>تُوفر رعاية فورية للحالات العاجلة مثل آلام الأسنان الشديدة أو الكسور لضمان راحة المريض وسرعة علاجه. </p>
         </a>
       </div>
+      <div class="service-item">
+  <a href="{% url 'price_list' %}">
+    <img src="{% static 'image/monye.png' %}" alt="قائمة الأسعار">
+    <h3>قائمة الأسعار</h3>
+    <p>عرض جميع خدمات العيادة وأسعارها بشكل واضح ومنظم</p>
+  </a>
+</div>
+
     </div>
   </section>
    <!-- قسم نبذة عنا -->
