--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -99,7 +99,7 @@
       <div class="swiper-slide doctor-card">
         <div class="doctor-img"><img src="{% static 'image/photo1.jpg' %}" alt=""></div>
         <div class="doctor-info">
-          <h3>د. أمل الفيتوري</h3>
+          <h3>د. بثينة الفيتوري</h3>
           <p>السبت 4:00-10:00 مساءاً.</p>
           <a href="{% url 'booking_page' %}?doctor=Reem" class="book-doctor-btn">احجز مع الدكتورة</a>
         </div>
